# nornir-apps

./: .gitignore  Makefile  README.md  nr-config-local.yaml  nr-config.yaml  pyproject.toml  requirements.txt
inventories/inventory-10-csr-local/: defaults.yaml  hosts.yaml
inventories/inventory-3-tier-local/: defaults.yaml  hosts.yaml  nr-config.yaml
inventories/simple-topology/: defaults.yaml  groups.yaml  hosts.yaml  nr-config.yaml
inventory/: defaults.yaml  groups.yaml  hosts.yaml
inventory-10-csr-local/: hosts.yaml
netconf-data/: config.yaml
netconf-xml-samples/: get-config.xml  get-config2.xml  get-config3.xml
notebooks/: basics.ipynb  build_diagram.ipynb  workshop.ipynb
nr_app/: constants.py  interface.py  link.py  topology.py  utils.py
output/netconf/: R1.xml  R10.xml  R2.xml  R3.xml  R4.xml  R5.xml  R6.xml  R7.xml  R8.xml  R9.xml
scripts/: build_network_diagram_lldp.py  cli_configure.py  find_mac.py  gather_commands.py  netconf_configure.py  netconf_save_config.py  restconf_get_lldp_neighbors.py
templates/: config.j2
