[tool.poetry]
name = "nr-app"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]

[tool.poetry.dependencies]
python = "~3.7"
nornir = { git = "https://github.com/nornir-automation/nornir.git", branch = "develop" }
colorama = "^0.4"
textfsm = "^1"
matplotlib = "^3"
requests = "^2"
networkx = "^2"
ncclient = "^0.6"
lxml = "^4"
jupyter = "^1.0.0"
netmiko = "^3"
pydantic = "1.3"

[tool.poetry.dev-dependencies]
bpython = "^0.18.0"
pdbpp = "^0.10.2"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
