[tool.poetry]
name = "nr-app"
version = "0.1.0"
description = ""
authors = ["Dmitry Figol <git@dmfigol.me>"]

[tool.poetry.dependencies]
python = "~3.7"
# nornir = { git = "https://github.com/nornir-automation/nornir.git", branch = "develop" }
nornir = "^2"
colorama = "^0.4"
textfsm = "^1"
matplotlib = "^3"
requests = "^2"
networkx = "^2"
ncclient = "^0.6"
lxml = "^4"
jupyter = "^1.0.0"
netmiko = "^3"
scrapli = {extras = ["paramiko", "ssh2"], version = "^2020.4.19"}
nornir-scrapli = "^2020.4.11"
httpx = "^0.12.1"

[tool.poetry.dev-dependencies]
bpython = "*"
pdbpp = "*"
black = {version = "*", allow-prereleases = true}
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
